--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/sqlite-dao.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/sqlite-dao.go.tmpl
@@ -60,11 +60,11 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
 	return {{.SmallResourceNamePlural}}, nil
 }
 
-func ({{.ResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
-	{{.ResourceNameSingular}}, err := {{.ResourceNameSingular}}Dao.sql_client.Get(id)
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
+	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Dao.sql_client.Get(id)
 	if err != nil {
 		return models.{{.CapsResourceNameSingular}}{}, err
 	}
-	log.Debugf("{{.ResourceNameSingular}} retrieved")
-	return *{{.ResourceNameSingular}}, nil
+	log.Debugf("{{.SmallResourceNameSingular}} retrieved")
+	return *{{.SmallResourceNameSingular}}, nil
 }
