fix: models for range loop

--- a/frameworks/go-grpc-server/pkg/grpc/server/models/model.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/models/model.go.tmpl
@@ -3,8 +3,9 @@ package models
 type {{.CapsResourceNameSingular}} struct {
     Id int64
     {{range $k, $v := .Fields}}
-    {{if eq $k "Id"}}
-    {{else}}
-    {{$k}} {{$v}}
+        {{if eq $k "Id"}}
+        {{else}}
+            {{$k}} {{$v}}
+        {{end}}
     {{end}}
 }
