--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sql/mysql-client.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sql/mysql-client.go.tmpl
@@ -5,7 +5,7 @@ import (
 	"errors"
 	"fmt"
 	"github.com/go-sql-driver/mysql"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 	"os"
 	"time"
 )
