--- a/frameworks/go-gin-server/pkg/rest/server/daos/mysql-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/mysql-dao.go.tmpl
@@ -8,7 +8,7 @@ import (
 )
 
 type {{.CapsResourceNameSingular}}Dao struct {
-	sql_client *sql_client.MySQLClient
+	sqlClient *sql_client.MySQLClient
 }
 
 func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, error) {
@@ -22,7 +22,7 @@ func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, e
 }
 
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
-	_, err := {{.SmallResourceNameSingular}}Dao.sql_client.Create({{.SmallResourceNameSingular}})
+	_, err := {{.SmallResourceNameSingular}}Dao.sqlClient.Create({{.SmallResourceNameSingular}})
 	if err != nil {
 		return err
 	}
@@ -34,7 +34,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
 	if id != {{.SmallResourceNameSingular}}.Id {
 		return errors.New("id and payload don't match")
 	}
-    _, err := {{.SmallResourceNameSingular}}Dao.sql_client.Update(id, {{.SmallResourceNameSingular}})
+    _, err := {{.SmallResourceNameSingular}}Dao.sqlClient.Update(id, {{.SmallResourceNameSingular}})
 	if err != nil {
 		return err
 	}
@@ -43,7 +43,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Updat
 }
 
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id int64) error {
-    err := {{.SmallResourceNameSingular}}Dao.sql_client.Delete(id)
+    err := {{.SmallResourceNameSingular}}Dao.sqlClient.Delete(id)
 	if err != nil {
 		return err
 	}
@@ -52,7 +52,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delet
 }
 
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
-    {{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Dao.sql_client.All()
+    {{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Dao.sqlClient.All()
 	if err != nil {
 		return {{.SmallResourceNamePlural}}, err
 	}
@@ -61,7 +61,7 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
 }
 
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
-	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Dao.sql_client.Get(id)
+	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Dao.sqlClient.Get(id)
 	if err != nil {
 		return models.{{.CapsResourceNameSingular}}{}, err
 	}
