--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sql/sqlite-client.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sql/sqlite-client.go.tmpl
@@ -3,7 +3,7 @@ package sql_client
 import (
 	"database/sql"
 	"errors"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
+	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 	"github.com/mattn/go-sqlite3"
 	"os"
 )
