--- a/frameworks/go-grpc-server/pkg/grpc/server/services/service.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/services/service.go.tmpl
@@ -3,28 +3,40 @@ package services
 import (
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+    log "github.com/sirupsen/logrus"
 )
 
-type {{.CapsResourceNameSingular}}Service struct {}
-
-var {{.SmallResourceNameSingular}}Dao = daos.{{.CapsResourceNameSingular}}Dao{}
-
-func ({{.CapsResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
-	return {{.SmallResourceNameSingular}}Dao.Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}})
+type {{.CapsResourceNameSingular}}Service struct {
+	{{.SmallResourceNameSingular}}Dao *daos.{{.CapsResourceNameSingular}}Dao
 }
 
-func ({{.CapsResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
-	return {{.SmallResourceNameSingular}}Dao.Get{{.CapsResourceNameSingular}}(id)
+func New{{.CapsResourceNameSingular}}Service() *{{.CapsResourceNameSingular}}Service {
+	{{.SmallResourceNameSingular}}Dao, err := daos.New{{.CapsResourceNameSingular}}Dao()
+	if err != nil {
+		log.Fatal(err)
+		return nil
+	}
+	return &{{.CapsResourceNameSingular}}Service{
+		{{.SmallResourceNameSingular}}Dao: {{.SmallResourceNameSingular}}Dao,
+	}
 }
 
-func ({{.CapsResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
-	return {{.SmallResourceNameSingular}}Dao.List{{.CapsResourceNamePlural}}()
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}})
 }
 
-func ({{.CapsResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
-	return {{.SmallResourceNameSingular}}Dao.Update{{.CapsResourceNameSingular}}(id, {{.SmallResourceNameSingular}})
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Get{{.CapsResourceNameSingular}}(id)
 }
 
-func ({{.CapsResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Delete{{.CapsResourceNameSingular}}(id int64) error {
-	return {{.SmallResourceNameSingular}}Dao.Delete{{.CapsResourceNameSingular}}(id)
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.List{{.CapsResourceNamePlural}}()
+}
+
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Update{{.CapsResourceNameSingular}}(id, {{.SmallResourceNameSingular}})
+}
+
+func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Delete{{.CapsResourceNameSingular}}(id int64) error {
+	return {{.SmallResourceNameSingular}}Service.{{.SmallResourceNameSingular}}Dao.Delete{{.CapsResourceNameSingular}}(id)
 }
