--- a/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
@@ -1,8 +1,9 @@
 type {{.CapsResourceNameSingular}} struct {
     Id int64
-    {{range $k, $v := .Fields}}
+{{range $k, $v := .Fields}}
     {{if eq $k "Id"}}
     {{else}}
     {{$k}} {{$v}}
     {{end}}
+{{end}}
 }
