fix: added an unique key constraint

--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sql/sqlite-client.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sql/sqlite-client.go.tmpl
@@ -32,8 +32,9 @@ func (r *SQLiteClient) Migrate() error {
 	CREATE TABLE IF NOT EXISTS {{.SmallResourceNamePlural}}(
 		Id INTEGER PRIMARY KEY AUTOINCREMENT,
         {{range $k, $v := .CreateQueryColumns}}
-        {{$k}} {{$v}} NOT NULL,
+        {{$k}} {{$v}} NOT NULL
         {{end}}
+        CONSTRAINT id_unique_key UNIQUE (Id)
 	)
 	`
 	_, err := r.db.Exec(query)
