--- a/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite-client.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/daos/clients/sqls/sqlite-client.go.tmpl
@@ -3,8 +3,8 @@ package {{.SmallResourceNameSingular}}_client
 import (
 	"database/sql"
 	"errors"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
-	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
+	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
+	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos/clients/sqls"
 
 	"github.com/mattn/go-sqlite3"
 )
